--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="top">
                 <h3>ATTENDANCE</h3>
-                <button class="close"><span>close</span></button>
+                <button class="close">close</button>
             </div>
 
             <div class="info">
@@ -130,5 +130,7 @@
             <p>A-HUB TECHNOLOGIES &copy; 2025. All rights reserved</p>
         </div>
     </footer> -->
+
+    <script src="index.js"></script>
 </body>
 </html>
