--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </header>
 
     <main>
+        <div class="welcome">
+            <h1>Welcome To Ahub Tech</h1>
+        </div>
         <section class="nav">
             <div class="month">
                 <span>MAY</span>
@@ -124,6 +127,13 @@
             </div>
         </div>
     </section>
+
+        <div class="btn">
+
+            <button>Add User</button>   
+            <button> Contact Admin</button>
+            <button>Take Attendance</button>
+        </div>
 
     <!-- <footer>
         <div class="wrapper">
