--- a/index.html
+++ b/index.html
@@ -131,6 +131,29 @@
         </div>
     </footer> -->
 
+    <form id="loginForm" style="display: flex; flex-direction: column; padding: 10px; gap: 5px;">
+        <input id="email" type="email" placeholder="email">
+        <input id="password" type="password" placeholder="password">
+        <button type="submit">submit</button>
+    </form>
+
+    <p id="error"></p>
+    
+    <form id="addUserForm" style="display: flex; flex-direction: column; padding: 10px; gap: 5px;">
+        <input type="text" id="name" placeholder="name">
+        <input type="text" id="program" placeholder="program">
+        <button type="submit">Add User</button>
+    </form>
+
+    <table id="usersTable">
+        <tbody>
+          <!-- table content will be rendered here -->
+        </tbody>
+    </table>      
+
     <script src="index.js"></script>
+    <script type="module" src="login.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="dashboard.js"></script>
 </body>
 </html>
