--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-inner">
             <img src="logo/A-HUB 56 x 56 PX.png" alt="A-hub logo">
-            <button class="admin-login-btn"><span>ADMIN LOGIN</span></button>
+            <a href="admin_login.html"><button class="admin-login-btn">ADMIN LOGIN</button></a>
         </div>
     </header>
 
@@ -141,6 +141,6 @@
         </div>
     </footer> -->     
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
