--- a/admin_login.html
+++ b/admin_login.html
@@ -19,12 +19,9 @@
                   <input type="password" >
                   <label>Password</label>
                 </div>
-                <a href="#" class="forgot_pass">Forgot password</a>
+                
+                <button type="submit">login</button>
            </form>
-               <a href="#" class="btn_submit">
-                <button>login</button>
-               </a>
-
         </div>
     </div>
     
