--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-inner">
             <img src="logo/A-HUB 56 x 56 PX.png" alt="A-hub logo">
-            <a href="admin_login.html"><button class="admin-login-btn">ADMIN LOGIN</button></a>
+            <a href="./login/admin_login.html"><button class="admin-login-btn">ADMIN LOGIN</button></a>
         </div>
     </header>
 
@@ -143,5 +143,6 @@
     </footer> -->     
 
     <script src="script.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
