--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-inner">
             <img src="logo/A-HUB 56 x 56 PX.png" alt="A-hub logo">
-            <a href="./login/admin_login.html"><button class="admin-login-btn">ADMIN LOGIN</button></a>
+            <a class="logInLink"><button class="admin-login-btn"></button></a>
         </div>
     </header>
 
@@ -142,7 +142,7 @@
         </div>
     </footer> -->     
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script type="module" src="./app.js"></script>
 </body>
 </html>
