--- a/login/admin_login.html
+++ b/login/admin_login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A-HUB | Attendance app | Log In</title>
+    <title>Log In | Attendance app</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./admin_login.css">
 </head>
 <body>
@@ -31,6 +32,6 @@
     </div>
     
     <!-- <script type="module" src="/login/app.js"></script> -->
-    <script type="module" src="/login/login.js"></script>
+    <script defer type="module" src="/login/login.js"></script>
 </body>
 </html>
