--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -39,6 +39,8 @@
             </tbody>
         </table>
 
+        <a class="nav-home" href="../index.html"><button>BACK HOME <i class="fa-solid fa-home"></i></button></a>
+
         <section class="add-user-form">
             <h6>ADD A USER</h6>
             <form id="addUserForm">
