--- a/login/admin_login.html
+++ b/login/admin_login.html
@@ -32,6 +32,6 @@
     </div>
     
     <!-- <script type="module" src="/login/app.js"></script> -->
-    <script defer type="module" src="/login/login.js"></script>
+    <script type="module" src="/login/login.js"></script>
 </body>
 </html>
