--- a/login/admin_login.html
+++ b/login/admin_login.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container">
         <div class="sign-in">
-            <h1>Log in</h1>
+            <h1>Log In</h1>
             <form id="loginForm">
                 <div class="user-box">
-                  <input id="email" type="email" required> 
+                  <input id="email" type="email" placeholder="Enter email" required> 
                   <label>E-mail</label>
                 </div>
                 <div class="user-box">
-                  <input id="password" type="password" required>
+                  <input id="password" type="password" placeholder="Enter password" required>
                   <label>Password</label>
                 </div>
                 
@@ -31,7 +31,6 @@
         <div id="error"></div>
     </div>
     
-    <!-- <script type="module" src="/login/app.js"></script> -->
     <script type="module" src="/login/login.js"></script>
 </body>
 </html>
