--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -16,12 +16,18 @@
         
 
         <div class="top-bar">
-            <div class="date-container">
-                <h4 class="day">Today</h4>
-                <div class="date">03/03/2025</div>
+            <div class="date-wrapper">                
+                <h4 class="month">JANUARY</h4>
+
+                <hr>
+
+                <div class="date-container">
+                    <h4 class="day"></h4>
+                    <div class="date"></div>
+                </div>
             </div>
 
-            <button id="add-user" class="add-user">ADD USER</button>
+            <button id="add-user" class="add-user">ADD USER&nbsp;&nbsp;<i class="fa-solid fa-user"></i></button>
         </div>
 
         <table id="usersTable">
@@ -39,7 +45,10 @@
             </tbody>
         </table>
 
-        <a class="nav-home" href="../index.html"><button>BACK HOME <i class="fa-solid fa-home"></i></button></a>
+        <div class="actions">
+            <a class="nav-home" href="../index.html"><button>BACK HOME&nbsp;&nbsp;<i class="fa-solid fa-home"></i></button></a>
+            <button class="log-out-btn">LOG OUT&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-right-from-bracket"></i></button>
+        </div>
 
         <section class="add-user-form">
             <h6>ADD A USER</h6>
